--- a/app/views/jobs/show.html.haml
+++ b/app/views/jobs/show.html.haml
@@ -4,3 +4,4 @@
 
 = link_to "home", root_path
 = link_to "Edit", edit_job_path(@job)
+= link_to "Delete", job_path(@job), method: :delete, data: { confirm: "Are you sure?"}
