Updated the application view

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
 %body
 	%nav.navbar.navbar-default
 		.container
-			.navbar-brand Rails Jobs
+			.navbar-brand Roderick's Job Board
 			%ul.nav.navbar-nav
 				%li= link_to "All Jobs", root_path
 				- Category.all.each do |category|
